feat: 첨삭 종료된 채팅방 멘트 표시 및 채팅방리스트에서 마지막 메세지 항상 표시되도록 수정